Replace table sorts with jQuery DataTables (adds pagination, too)
Initially added in b1153ba7df3765a31e7fc5a7dfa12aac88bdb4ef

--- a/AbroadAdvisor/Views/Experience/List.cshtml
+++ b/AbroadAdvisor/Views/Experience/List.cshtml
@@ -8,6 +8,16 @@
     ViewBag.Title = "List";
 }
 
+@section FooterScript {
+    <script>
+        $(function () {
+            'use strict';
+
+            $('#experiencelist').dataTable();
+        });
+    </script>
+}
+
 @section Body {
     <div class="row">
         <div class="col-lg-8">
@@ -16,7 +26,7 @@
     </div>
 
     <div class="table-responsive">
-        <table class="table table-bordered table-hover table-striped tablesorter table-condensed">
+        <table id="experiencelist" class="table table-bordered table-hover table-striped tablesorter table-condensed">
             <thead>
                 <tr>
                     <th>Student</th>
