--- a/AbroadAdvisor/Views/Student/StudyAbroad.cshtml
+++ b/AbroadAdvisor/Views/Student/StudyAbroad.cshtml
@@ -5,7 +5,8 @@
 @model IEnumerable<StudyAbroadModel>
 
 <div class="table-responsive">
-    <table class="table table-bordered table-hover table-striped tablesorter">
+    <br />
+    <table id="studyabroad" class="table table-bordered table-hover table-striped tablesorter">
         <thead>
             <tr>
                 <th>Year</th>
