--- a/AbroadAdvisor/Views/Student/List.cshtml
+++ b/AbroadAdvisor/Views/Student/List.cshtml
@@ -74,12 +74,12 @@
     <br />
 
     <div class="table-responsive">
-        <table class="table table-bordered table-hover table-striped tablesorter table-condensed">
+        <table id="studentlist" class="table table-bordered table-hover table-striped tablesorter table-condensed">
             <thead>
                 <tr>
-                    <th>Name <i class="fa fa-sort"></i></th>
-                    <th>Email <i class="fa fa-sort"></i></th>
-                    <th>Cell Phone <i class="fa fa-sort"></i></th>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Cell Phone</th>
                     <th></th>
                 </tr>
             </thead>
