--- a/AbroadAdvisor/Views/User/List.cshtml
+++ b/AbroadAdvisor/Views/User/List.cshtml
@@ -6,6 +6,16 @@
     ViewBag.Title = "UserList";
 }
 
+@section FooterScript {
+    <script>
+        $(function () {
+            'use strict';
+
+            $('#userlist').dataTable();
+        });
+    </script>
+}
+
 @section Body {
     <div class="row">
         <div class="col-lg-8">
@@ -26,15 +36,15 @@
     </div>
 
     <div class="table-responsive">
-        <table class="table table-bordered table-hover table-striped tablesorter">
+        <table id="userlist" class="table table-bordered table-hover table-striped tablesorter">
             <thead>
                 <tr>
-                    <th>Name <i class="fa fa-sort"></i></th>
-                    <th>Login <i class="fa fa-sort"></i></th>
-                    <th>Created <i class="fa fa-sort"></i></th>
-                    <th>Last Login <i class="fa fa-sort"></i></th>
-                    <th>Admin <i class="fa fa-sort"></i></th>
-                    <th>Active <i class="fa fa-sort"></i></th>
+                    <th>Name</th>
+                    <th>Login</th>
+                    <th>Created</th>
+                    <th>Last Login</th>
+                    <th>Admin</th>
+                    <th>Active</th>
                 </tr>
             </thead>
             <tbody>
