--- a/AbroadAdvisor/Views/Promo/List.cshtml
+++ b/AbroadAdvisor/Views/Promo/List.cshtml
@@ -54,12 +54,23 @@
             <tbody>
                 @foreach (PromoModel promo in Model)
                 {
+                    int students = promo.Logs.Count();
+
                     <tr>
                         <td>@Html.ActionLink(promo.Code, "Info", new { id = promo.Id })</td>
                         <td>@promo.CreatedBy.FirstName @promo.CreatedBy.LastName</td>
                         <td>@DateTimeFilter.UtcToLocal(promo.Created)</td>
                         <td>@promo.Description</td>
-                        <td>@(promo.Logs.Count<StudentPromoLog>().ToString("N0"))</td>
+                        <td>
+                            @if (students > 0)
+                            {
+                                @Html.ActionLink(students.ToString("N0"), "Students", new { id = promo.Id })
+                            }
+                            else
+                            {
+                                @students
+                            }
+                        </td>
                         <td>
                             @if (promo.IsActive)
                             {
