Fix student wishlist not saving selections
Other fixes:
 * Change enum to start at one. NEVER start at zero.
 * Fix properly selecting OPTIONs. Strict jQuery val() doesn't cut it.
 * Remove country foreign key constraint since user can select no
   country, causing the value to be zero which isn't a valid country.

--- a/AbroadAdvisor/Views/Student/Edit.cshtml
+++ b/AbroadAdvisor/Views/Student/Edit.cshtml
@@ -4,10 +4,6 @@
 
 @{
     ViewBag.Title = "Edit";
-
-    IEnumerable<int> studyAbroadCountries = Model.StudyAbroadCountry;
-    IEnumerable<int> studyAbroadYears = Model.StudyAbroadYear;
-    IEnumerable<int> studyAbroadPeriods = Model.StudyAbroadPeriod;
 }
 
 @section FooterScript {
@@ -15,9 +11,9 @@
         $(function () {
             Bennett.AbroadAdvisor.Student.initStudentAddEdit();
             Bennett.AbroadAdvisor.Student.addStudyAbroadRows(
-                [@String.Join(",", studyAbroadCountries)],
-                [@String.Join(",", studyAbroadYears)],
-                [@String.Join(",", studyAbroadPeriods)]
+                [@String.Join(",", Model.StudyAbroadCountry)],
+                [@String.Join(",", Model.StudyAbroadYear)],
+                [@String.Join(",", Model.StudyAbroadPeriod)]
             );
             Bennett.AbroadAdvisor.singleSubmit();
 
