--- a/Belletrix/Views/Experience/Add.cshtml
+++ b/Belletrix/Views/Experience/Add.cshtml
@@ -16,7 +16,7 @@
                 buttonContainer: '<div class="button-default" />'
             });
 
-            Belletrix.singleSubmit();
+            Belletrix.Common.singleSubmit();
         });
     </script>
 }
