--- a/Belletrix/Views/Note/List.cshtml
+++ b/Belletrix/Views/Note/List.cshtml
@@ -57,6 +57,6 @@
         });
 
         Belletrix.Student.handleNewNote('#newnote', 'textarea#Note', '@user.FirstName', '@user.LastName');
-        Belletrix.singleSubmit();
+        Belletrix.Common.singleSubmit();
     });
 </script>
