--- a/Belletrix/Views/Experience/Add.cshtml
+++ b/Belletrix/Views/Experience/Add.cshtml
@@ -9,6 +9,8 @@
 @section FooterScript {
     <script>
         $(function () {
+            'use strict';
+
             $('input[type=date]').addClass('form-control');
 
             $('.multiselect').multiselect({
