--- a/Belletrix/Views/Promo/Students.cshtml
+++ b/Belletrix/Views/Promo/Students.cshtml
@@ -9,7 +9,8 @@
 @section FooterScript {
     <script>
         $(function () {
-            Belletrix.Student.initStudentList();
+            var student = new Belletrix.Student();
+            student.initStudentList();
         });
     </script>
 }
