--- a/Belletrix/Views/Student/Edit.cshtml
+++ b/Belletrix/Views/Student/Edit.cshtml
@@ -9,12 +9,17 @@
 @section FooterScript {
     <script>
         $(function () {
-            Belletrix.Student.initStudentAddEdit();
-            Belletrix.Student.addStudyAbroadRows(
+            'use strict';
+
+            var student = new Belletrix.Student();
+
+            student.initStudentAddEdit();
+            student.addStudyAbroadRows(
                 [@String.Join(",", Model.StudyAbroadCountry)],
                 [@String.Join(",", Model.StudyAbroadYear)],
                 [@String.Join(",", Model.StudyAbroadPeriod)]
             );
+
             Belletrix.Common.singleSubmit();
 
             $('a[href="#studyabroadtab"]').on('show.bs.tab', function (e) {
