--- a/Belletrix/Views/User/Login.cshtml
+++ b/Belletrix/Views/User/Login.cshtml
@@ -1,5 +1,4 @@
-﻿@using Belletrix.Core;
-@using Belletrix.Models;
+﻿@using Belletrix.Models;
 
 @model LoginModel
 
@@ -11,13 +10,7 @@
     Layout = null;
     HtmlHelper.ClientValidationEnabled = true;
     HtmlHelper.UnobtrusiveJavaScriptEnabled = true;
-    string pageTitle = "Belletrix";
-    bool developmentEnvironment = DeploymentEnvironment.IsDevelopment;
-
-    if (!DeploymentEnvironment.IsProduction)
-    {
-        pageTitle += String.Format(" ({0})", DeploymentEnvironment.Enviroment);
-    }
+    const string pageTitle = "Belletrix";
 }
 
 <!doctype html>
