Revert TypeScript migration from 607363178611bc4a9df6e1c6b33cab9169e63b78
AppHarbor doesn't support TypeScript. While we can alter the build
script to compile the TypeScript scripts to vanilla JavaScript and
commit those files to the repo so AppHarbor's build process doesn't have
to know anything about TypeScript, I'd rather not do that.

Maintain all other aspects of 607363178611bc4a9df6e1c6b33cab9169e63b78
that didn't pertain to TypeScript. (It was a dirty merge commit, I
know.)

--- a/Belletrix/Views/Experience/Add.cshtml
+++ b/Belletrix/Views/Experience/Add.cshtml
@@ -18,7 +18,7 @@
                 buttonContainer: '<div class="button-default" />'
             });
 
-            Belletrix.Common.singleSubmit();
+            Belletrix.singleSubmit();
         });
     </script>
 }
