--- a/Belletrix/Views/Promo/Add.cshtml
+++ b/Belletrix/Views/Promo/Add.cshtml
@@ -9,9 +9,8 @@
 @section FooterScript {
     <script>
         $(function () {
-            var promo = new Belletrix.Promo();
-            promo.init('@Url.Action("CheckUniqueName")', '#Code', '#codecheckresult');
-            Belletrix.Common.singleSubmit();
+            Belletrix.Promo.init('@Url.Action("CheckUniqueName")', '#Code', '#codecheckresult');
+            Belletrix.singleSubmit();
         });
     </script>
 }
