--- a/Belletrix/Views/Shared/_Layout.cshtml
+++ b/Belletrix/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
 
         <script>
             $(function () {
-                Belletrix.Common.initPinger('@Url.Action("Ping", "Home")');
+                Belletrix.initPinger('@Url.Action("Ping", "Home")');
             });
         </script>
     </body>
