--- a/Belletrix/Views/Shared/_PromoLayout.cshtml
+++ b/Belletrix/Views/Shared/_PromoLayout.cshtml
@@ -19,7 +19,7 @@
 
     <script>
         $(function () {
-            Belletrix.Common.initPinger('@Url.Action("Ping", "Home")');
+            Belletrix.initPinger('@Url.Action("Ping", "Home")');
         });
     </script>
 </body>
