--- a/Belletrix/Views/Student/List.cshtml
+++ b/Belletrix/Views/Student/List.cshtml
@@ -10,8 +10,7 @@
 @section FooterScript {
     <script>
         $(function () {
-            var student = new Belletrix.Student();
-            student.initStudentList();
+            Belletrix.Student.initStudentList();
         });
     </script>
 }
