--- a/Belletrix/Views/User/Login.cshtml
+++ b/Belletrix/Views/User/Login.cshtml
@@ -60,7 +60,7 @@
     @Scripts.Render("~/bundles/js")
     <script>
         $(function () {
-            Belletrix.Common.singleSubmit();
+            Belletrix.singleSubmit();
         });
     </script>
 </body>
