--- a/Belletrix/Views/User/Profile.cshtml
+++ b/Belletrix/Views/User/Profile.cshtml
@@ -14,7 +14,7 @@
 @section FooterScript {
     <script>
         $(function () {
-            Belletrix.Common.singleSubmit();
+            Belletrix.singleSubmit();
         });
     </script>
 }
