--- a/Belletrix/Views/Promo/Students.cshtml
+++ b/Belletrix/Views/Promo/Students.cshtml
@@ -9,8 +9,7 @@
 @section FooterScript {
     <script>
         $(function () {
-            var student = new Belletrix.Student();
-            student.initStudentList();
+            Belletrix.Student.initStudentList();
         });
     </script>
 }
