--- a/Belletrix/Views/Note/List.cshtml
+++ b/Belletrix/Views/Note/List.cshtml
@@ -56,7 +56,7 @@
             $('#newnote').submit();
         });
 
-        Belletrix.Student.handleNewNote('#newnote', 'textarea#Note', '@user.FirstName', '@user.LastName');
+        Belletrix.Student.Note.handleNewNote('#newnote', 'textarea#Note', '@user.FirstName', '@user.LastName');
         Belletrix.singleSubmit();
     });
 </script>
