--- a/Belletrix/Views/Student/View.cshtml
+++ b/Belletrix/Views/Student/View.cshtml
@@ -9,7 +9,7 @@
 @section FooterScript {
     <script>
         $(function () {
-            Belletrix.Student.initStudentView();
+            Belletrix.Student.Note.initModal();
         });
     </script>
 }
