Start of Activity Log implementation

--- a/Belletrix/Content/css/Belletrix.css
+++ b/Belletrix/Content/css/Belletrix.css
@@ -41,6 +41,10 @@
         color: #fff;
         background-color: #080808;
     }
+    .nav-sidebar .fa {
+        font-size: 150% !important;
+        margin-right: 5px;
+    }
 
 .main {
     padding: 20px;
