--- a/Belletrix/Views/Shared/_Layout.cshtml
+++ b/Belletrix/Views/Shared/_Layout.cshtml
@@ -56,6 +56,7 @@
                         <li @if (ViewBag.ActivePage == "students") { <text> class="active" </text> }><a href="@Url.Action("List", "Student")"><i class="fa fa-table"></i> Students</a></li>
                         <li @if (ViewBag.ActivePage == "experiences") { <text> class="active" </text> }><a href="@Url.Action("List", "Experience")"><i class="fa fa-plane"></i> Experiences</a></li>
                         <li @if (ViewBag.ActivePage == "promos") { <text> class="active" </text>  }><a href="@Url.Action("List", "Promo")"><i class="fa fa-certificate"></i> Promos</a></li>
+                        <li @if (ViewBag.ActivePage == "activitylog") { <text> class="active" </text>   }><a href="@Url.Action("List", "ActivityLog")"><i class="fa fa-pencil-square-o "></i> Activity Log</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
