--- a/Belletrix/Views/ActivityLog/List.cshtml
+++ b/Belletrix/Views/ActivityLog/List.cshtml
@@ -12,31 +12,31 @@
 {
     if (types.Contains((int)ActivityLogModel.ActivityType.Conference))
     {
-        <span class="label label-default">Conference</span>
+        <span class="label label-default">@ActivityLogModel.ActivityType.Conference</span>
     }
     if (types.Contains((int)ActivityLogModel.ActivityType.Institute))
     {
-        <span class="label label-primary">Institute</span>
+        <span class="label label-primary">@ActivityLogModel.ActivityType.Institute</span>
     }
     if (types.Contains((int)ActivityLogModel.ActivityType.Summit))
     {
-        <span class="label label-success">Summit</span>
+        <span class="label label-success">@ActivityLogModel.ActivityType.Summit</span>
     }
     if (types.Contains((int)ActivityLogModel.ActivityType.Grant))
     {
-        <span class="label label-info">Grant</span>
+        <span class="label label-info">@ActivityLogModel.ActivityType.Grant</span>
     }
     if (types.Contains((int)ActivityLogModel.ActivityType.Community))
     {
-        <span class="label label-warning">Community</span>
+        <span class="label label-warning">@ActivityLogModel.ActivityType.Community</span>
     }
     if (types.Contains((int)ActivityLogModel.ActivityType.Student))
     {
-        <span class="label label-danger">Student</span>
+        <span class="label label-danger">@ActivityLogModel.ActivityType.Student</span>
     }
     if (types.Contains((int)ActivityLogModel.ActivityType.SiteVisit))
     {
-        <span class="label label-default">SiteVisit</span>
+        <span class="label label-default">@ActivityLogModel.ActivityType.SiteVisit</span>
     }
 }
 
@@ -44,7 +44,7 @@
     <script>
         $(function () {
             'use strict';
-            //$('#experiencelist').dataTable();
+            $('#activitylist').dataTable();
         });
     </script>
 }
@@ -52,7 +52,10 @@
 @section Body {
     <div class="row">
         <div class="col-lg-8">
-            <h1>Students Abroad <small>@Model.Count.ToString("N0") total</small></h1>
+            <h1>Activities Logged <small>@Model.Count().ToString("N0") total</small></h1>
+        </div>
+        <div class="col-lg-4 text-right">
+            <a href="@Url.Action("Add", "ActivityLog")"><i class="fa fa-plus-circle"></i> Add Activity</a>
         </div>
     </div>
 
@@ -78,7 +81,7 @@
                             @if (!String.IsNullOrEmpty(activity.Title2))
                             {
                                 <br /><small>@activity.Title2</small>
-                                @if (!String.IsNullOrEmpty(activity.Title3))
+                                if (!String.IsNullOrEmpty(activity.Title3))
                                 {
                                     <br /><small>@activity.Title3</small>
                                 }
