Start of activity log add display

--- a/src/Belletrix/Views/ActivityLog/List.cshtml
+++ b/src/Belletrix/Views/ActivityLog/List.cshtml
@@ -54,7 +54,7 @@
             <h1>Activities Logged <small>@Model.Count().ToString("N0") total</small></h1>
         </div>
         <div class="col-lg-4 text-right">
-            <a href="@Url.Action("Create", "ActivityLog")"><i class="fa fa-plus-circle"></i> Add Activity</a>
+            <a href="@Url.Action("Add", "ActivityLog")"><i class="fa fa-plus-circle"></i> Add Activity</a>
         </div>
     </div>
 
