--- a/src/Belletrix/Views/ActivityLog/Add.cshtml
+++ b/src/Belletrix/Views/ActivityLog/Add.cshtml
@@ -22,11 +22,11 @@
 @section Body {
     <div class="row">
         <div class="col-lg-12">
-            <h1>@ViewBag.Title Student</h1>
+            <h1>Add Activity</h1>
         </div>
     </div>
 
-    @using (Html.BeginForm(null, null, FormMethod.Post, new { role = "form", id = "student-form" }))
+    @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
         @Html.ValidationSummary()
@@ -35,7 +35,47 @@
             <div class="col-lg-6">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Personal Information</h3>
+                        <h3 class="panel-title">Participants</h3>
+                    </div>
+
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="form-group has-error">
+                                    @Html.LabelFor(x => x.Title)
+                                    @Html.TextBoxFor(x => x.Title, new { @class = "form-control" })
+                                </div>
+                                <div class="form-group input-group-sm reducePadding">
+                                    @Html.TextBoxFor(x => x.Title2, new { @class = "form-control" })
+                                </div>
+                                <div class="form-group input-group-sm reducePadding">
+                                    @Html.TextBoxFor(x => x.Title3, new { @class = "form-control" })
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="form-group">
+                                    @Html.LabelFor(x => x.Organizers)
+                                    @Html.TextBoxFor(x => x.Organizers, new { @class = "form-control" })
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="input-group">
+                                    Types go here
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="form-group">
+                                    @Html.LabelFor(x => x.Location)
+                                    @Html.TextBoxFor(x => x.Location, new { @class = "form-control" })
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
