--- a/src/Belletrix/Views/Home/Index.cshtml
+++ b/src/Belletrix/Views/Home/Index.cshtml
@@ -6,8 +6,13 @@
 
 @section Body {
     <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header"></h1>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-lg-4">
-            <div class="panel panel-primary">
+            <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title"><i class="fa fa-clock-o"></i> Recent Activity</h3>
                 </div>
@@ -24,12 +29,12 @@
                             {
                                 case (int)EventLogModel.EventType.AddStudent:
                                     action = "added";
-                                    iconClass = modifiedByRealUser ? "fa fa-user" : "fa fa-certificate";
+                                    iconClass = modifiedByRealUser ? "fa fa-user-plus" : "fa fa-certificate";
                                     break;
                                     
                                 case (int)EventLogModel.EventType.EditStudent:
                                     action = "modified";
-                                    iconClass = "fa fa-user";
+                                    iconClass = "fa fa-pencil-square-o";
                                     break;
                                     
                                 case (int)EventLogModel.EventType.AddStudentExperience:
@@ -45,51 +50,12 @@
 
                             string eventBy = !modifiedByRealUser ? "System" : eventLog.ModifiedBy.FirstName;
                             
-                            <a href="#" class="list-group-item">
-                                <span class="badge" title="@eventLog.EventDate.ToString("dddd, MMMM d, yyyy \\a\\t h:mm tt")">@EventLogModel.CalculateRelativeDate(eventLog.EventDate)</span>
-                                <i class="@iconClass"></i> @eventBy @action @personName
+                            <a href="#" class="list-group-item" title="@eventBy @action @personName">
+                                <i class="@iconClass fa-fw"></i> @personName
+                                <span class="pull-right text-muted small" title="@eventLog.EventDate.ToString("dddd, MMMM d, yyyy \\a\\t h:mm tt")"><em>@EventLogModel.CalculateRelativeDate(eventLog.EventDate)</em></span>
                             </a>
                         }
-                        @*
-                        <a href="#" class="list-group-item">
-                            <span class="badge">just now</span>
-                            <i class="fa fa-calendar"></i> Calendar updated
-                        </a>
-                        <a href="#" class="list-group-item">
-                            <span class="badge">4 minutes ago</span>
-                            <i class="fa fa-comment"></i> Commented on a post
-                        </a>
-                        <a href="#" class="list-group-item">
-                            <span class="badge">23 minutes ago</span>
-                            <i class="fa fa-truck"></i> Order 392 shipped
-                        </a>
-                        <a href="#" class="list-group-item">
-                            <span class="badge">46 minutes ago</span>
-                            <i class="fa fa-money"></i> Invoice 653 has been paid
-                        </a>
-                        <a href="#" class="list-group-item">
-                            <span class="badge">1 hour ago</span>
-                            <i class="fa fa-user"></i> A new user has been added
-                        </a>
-                        <a href="#" class="list-group-item">
-                            <span class="badge">2 hours ago</span>
-                            <i class="fa fa-check"></i> Completed task: "pick up dry cleaning"
-                        </a>
-                        <a href="#" class="list-group-item">
-                            <span class="badge">yesterday</span>
-                            <i class="fa fa-globe"></i> Saved the world
-                        </a>
-                        <a href="#" class="list-group-item">
-                            <span class="badge">two days ago</span>
-                            <i class="fa fa-check"></i> Completed task: "fix error on sales page"
-                        </a>
-                        *@
                     </div>
-                    @*
-                    <div class="text-right">
-                        <a href="#">View All Activity <i class="fa fa-arrow-circle-right"></i></a>
-                    </div>
-                    *@
                 </div>
             </div>
         </div>
