--- a/src/Belletrix/Views/Shared/_Layout.cshtml
+++ b/src/Belletrix/Views/Shared/_Layout.cshtml
@@ -1,13 +1,31 @@
-﻿@using Belletrix.Models;
+﻿@using Belletrix.Controllers;
+@using Belletrix.Models;
 
 @{
     Layout = null;
     const string siteTitle = "Belletrix";
     UserModel user = Session["User"] as UserModel;
+    const string sidebarLinkActiveClassName = "active";
+
+    Dictionary<string, string> sidebarLinks = new Dictionary<string, string>()
+    {
+        { HomeController.ActivePageName, null },
+        { StudentController.ActivePageName, null },
+        { ExperienceController.ActivePageName, null },
+        { PromoController.ActivePageName, null },
+        { ActivityLogController.ActivePageName, null }
+    };
+
+    if (sidebarLinks.ContainsKey(ViewBag.ActivePage))
+    {
+        sidebarLinks[ViewBag.ActivePage] = sidebarLinkActiveClassName;
+    }
+
+    const string navbarCollapseClassName = "navbar-collapse";
 }
 
 <!doctype html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta name="robots" content="noindex,nofollow" />
@@ -17,11 +35,10 @@
         @RenderSection("HeaderStyle", false)
     </head>
     <body>
-
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container-fluid">
+        <div id="wrapper">
+            <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".@navbarCollapseClassName">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -29,39 +46,37 @@
                     </button>
                     @Html.ActionLink(siteTitle, "Index", "Home", null, new { @class = "navbar-brand" })
                 </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav navbar-right navbar-user">
-                        <li class="dropdown user-dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-user"></i>
-                                @user.FirstName @user.LastName
-                                <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="@Url.Action("Profile", "User")"><i class="fa fa-user"></i> Profile</a></li>
-                                <li class="divider"></li>
-                                <li><a href="@Url.Action("Logoff", "User")"><i class="fa fa-power-off"></i> Log Out</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
 
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-3 col-md-2 sidebar">
-                    <ul class="nav nav-sidebar">
-                        <li @if (ViewBag.ActivePage == "dashboard") { <text> class="active" </text> }><a href="@Url.Action("Index", "Home")"><i class="fa fa-dashboard"></i> Dashboard</a></li>
-                        <li @if (ViewBag.ActivePage == "students") { <text> class="active" </text> }><a href="@Url.Action("List", "Student")"><i class="fa fa-table"></i> Students</a></li>
-                        <li @if (ViewBag.ActivePage == "experiences") { <text> class="active" </text> }><a href="@Url.Action("List", "Experience")"><i class="fa fa-plane"></i> Experiences</a></li>
-                        <li @if (ViewBag.ActivePage == "promos") { <text> class="active" </text>  }><a href="@Url.Action("List", "Promo")"><i class="fa fa-certificate"></i> Promos</a></li>
-                        <li @if (ViewBag.ActivePage == "activitylog") { <text> class="active" </text>   }><a href="@Url.Action("List", "ActivityLog")"><i class="fa fa-pencil-square-o "></i> Activity Log</a></li>
-                    </ul>
+                <ul class="nav navbar-top-links navbar-right">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <i class="fa fa-user fa-fw"></i>
+                            @user.FirstName @user.LastName
+                            <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            <li><a href="@Url.Action("Profile", "User")"><i class="fa fa-user fa-fw"></i> Profile</a></li>
+                            <li class="divider"></li>
+                            <li><a href="@Url.Action("Logoff", "User")"><i class="fa fa-power-off fa-fw"></i> Log Out</a></li>
+                        </ul>
+                    </li>
+                </ul>
+
+                <div class="navbar-default sidebar" role="navigation">
+                    <div class="sidebar-nav @navbarCollapseClassName collapse">
+                        <ul class="nav" id="side-menu">
+                            <li><a href="@Url.Action("Index", "Home")" class="@sidebarLinks[HomeController.ActivePageName]"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a></li>
+                            <li><a href="@Url.Action("List", "Student")" class="@sidebarLinks[StudentController.ActivePageName]"><i class="fa fa-table fa-fw"></i> Students</a></li>
+                            <li><a href="@Url.Action("List", "Experience")" class="@sidebarLinks[ExperienceController.ActivePageName]"><i class="fa fa-plane fa-fw"></i> Experiences</a></li>
+                            <li><a href="@Url.Action("List", "Promo")" class="@sidebarLinks[PromoController.ActivePageName]"><i class="fa fa-certificate fa-fw"></i> Promos</a></li>
+                            <li><a href="@Url.Action("List", "ActivityLog")" class="@sidebarLinks[ActivityLogController.ActivePageName]"><i class="fa fa-pencil-square-o fa-fw"></i> Activity Log</a></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    @RenderSection("Body", true)
-                </div>
+            </nav>
+
+            <div id="page-wrapper" style="min-height: 286px;">
+                @RenderSection("Body", true)
             </div>
         </div>
 
