--- a/src/Belletrix/Views/ActivityLog/Add.cshtml
+++ b/src/Belletrix/Views/ActivityLog/Add.cshtml
@@ -1,4 +1,5 @@
-﻿@using Belletrix.Entity.ViewModel;
+﻿@using Belletrix.Entity.Enum;
+@using Belletrix.Entity.ViewModel;
 
 @model ActivityLogCreateViewModel
 
@@ -22,7 +23,7 @@
 @section Body {
     <div class="row">
         <div class="col-lg-12">
-            <h1>Add Activity</h1>
+            <h1 class="page-header">Add Activity</h1>
         </div>
     </div>
 
@@ -33,9 +34,9 @@
 
         <div class="row">
             <div class="col-lg-6">
-                <div class="panel panel-primary">
+                <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Participants</h3>
+                        <h3 class="panel-title">Activity Details</h3>
                     </div>
 
                     <div class="panel-body">
@@ -50,6 +51,7 @@
                                 </div>
                                 <div class="form-group input-group-sm reducePadding">
                                     @Html.TextBoxFor(x => x.Title3, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(x => x.Title)
                                 </div>
                             </div>
                         </div>
@@ -63,8 +65,29 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-12">
-                                <div class="input-group">
-                                    Types go here
+                                <div class="form-group" data-toggle="buttons">
+                                    <label class="btn btn-default btn-xs">
+                                        <input name="Types" type="checkbox" autocomplete="off" value="@((int)ActivityLogTypes.Conference)"> @ActivityLogTypes.Conference
+                                    </label>
+                                    <label class="btn btn-default btn-xs">
+                                        <input name="Types" type="checkbox" autocomplete="off" value="@((int)ActivityLogTypes.Institute)"> @ActivityLogTypes.Institute
+                                    </label>
+                                    <label class="btn btn-default btn-xs">
+                                        <input name="Types" type="checkbox" autocomplete="off" value="@((int)ActivityLogTypes.Summit)"> @ActivityLogTypes.Summit
+                                    </label>
+                                    <label class="btn btn-default btn-xs">
+                                        <input name="Types" type="checkbox" autocomplete="off" value="@((int)ActivityLogTypes.Grant)"> @ActivityLogTypes.Grant
+                                    </label>
+                                    <label class="btn btn-default btn-xs">
+                                        <input name="Types" type="checkbox" autocomplete="off" value="@((int)ActivityLogTypes.Community)"> @ActivityLogTypes.Community
+                                    </label>
+                                    <label class="btn btn-default btn-xs">
+                                        <input name="Types" type="checkbox" autocomplete="off" value="@((int)ActivityLogTypes.Student)"> @ActivityLogTypes.Student
+                                    </label>
+                                    <label class="btn btn-default btn-xs">
+                                        <input name="Types" type="checkbox" autocomplete="off" value="@((int)ActivityLogTypes.SiteVisit)"> @ActivityLogTypes.SiteVisit
+                                    </label>
+                                    @Html.ValidationMessageFor(x => x.Types)
                                 </div>
                             </div>
                         </div>
@@ -73,11 +96,29 @@
                                 <div class="form-group">
                                     @Html.LabelFor(x => x.Location)
                                     @Html.TextBoxFor(x => x.Location, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(x => x.Location)
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="col-lg-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Participants</h3>
+                    </div>
+
+                    <div class="panel-body">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12">
+                <button type="submit" class="btn btn-default">Add Activity</button>
             </div>
         </div>
     }
