--- a/src/Belletrix/Views/ActivityLog/List.cshtml
+++ b/src/Belletrix/Views/ActivityLog/List.cshtml
@@ -54,7 +54,11 @@
             <h1 class="page-header">
                 Activities Logged
                 <small>@Model.Count().ToString("N0") total</small>
-                <small><span class="pull-right small"><a href="@Url.Action("Add", "ActivityLog")"><i class="fa fa-plus-circle"></i> Add Activity</a></span></small>
+                <small>
+                    <span class="pull-right small">
+                        <a href="@Url.Action("Add", "ActivityLog")"><i class="fa fa-plus-circle fa-fw"></i> Add Activity</a>
+                    </span>
+                </small>
             </h1>
         </div>
     </div>
@@ -95,7 +99,7 @@
                                 <div class="btn-group">
                                     <a href="@Url.Action("Edit", "ActivityLog", new { id = activity.Id })"
                                        class="btn btn-xs btn-info" data-placement="top"
-                                       title="Edit"><i class="fa fa-pencil"></i></a>
+                                       title="Edit"><i class="fa fa-pencil fa-fw"></i></a>
                                 </div>
                             </td>
                         </tr>
