--- a/src/Belletrix/Views/Experience/Add.cshtml
+++ b/src/Belletrix/Views/Experience/Add.cshtml
@@ -11,7 +11,7 @@
         $(function () {
             'use strict';
 
-            $('input[type=date]').addClass('form-control');
+            Belletrix.handleMvcEditor();
 
             $('.multiselect').multiselect({
                 numberDisplayed: 1,
